...
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textColor="@color/lemain_text"
                android:textStyle="bold"
                tools:text="Salário" />

            <TextView
                android:id="@+id/textoValor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="R$ 3.000,00" />
        </LinearLayout>
...
