...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rotulo_saldo_atual"
                    android:textAppearance="?attr/textAppearanceTitleSmall" />

                <TextView
                    android:id="@+id/textoSaldo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textAppearance="?attr/textAppearanceHeadlineMedium" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
...
                android:textColor="?android:attr/textColorSecondary"
                android:visibility="gone" />
        </FrameLayout>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabNovoLancamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="20dp"
        android:contentDescription="@string/descricao_fab_novo"
        app:srcCompat="@android:drawable/ic_input_add" />
...
